fixed font smoothing issue on safari

--- a/styles.css
+++ b/styles.css
@@ -1106,11 +1106,6 @@ a{
 		overflow:auto;
 	}
 }
-@media (min-width:465px) and (max-height: 940px) {
-	.introduction{
-		height:auto;
-	}
-}
 @media only screen and (min-width: 1200px) {
 	.about-backdrop{
 		font-size:550%;
